--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,16 @@ requires-python = ">=3.11"
 dependencies = [
     "setuptools",
     "trl",
-    "liger-kernel>=0.5.2",
     "deepspeed>=0.15.4",
     "accelerate>=1.3.0",
     "vllm>=0.7.2",
     "wandb",
     "torch>=2.5.1",
+]
+
+[project.optional-dependencies]
+gpu = [
+    "liger-kernel>=0.5.2",
     "flash-attn==2.7.3",
 ]
 
