--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = {text = "MIT"}
 requires-python = ">=3.11"
 dependencies = [
     "setuptools",
-    "trl",
+    "trl @ git+https://github.com/groundlight/trl.git@add_verifiers_support",
     "deepspeed>=0.15.4",
     "accelerate>=1.3.0",
     "vllm>=0.7.2",
