use our trl from branch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ license = {text = "MIT"}
 requires-python = ">=3.11"
 dependencies = [
     "setuptools",
-    "trl",
     "deepspeed>=0.15.4",
     "accelerate>=1.3.0",
     "vllm>=0.7.2",
     "wandb",
     "torch>=2.5.1",
+    # Groundlight's fork of TRL
+    "trl @ git+https://github.com/groundlight/trl.git@add_verifiers_support",
 ]
 
 [project.optional-dependencies]
@@ -22,6 +23,3 @@ gpu = [
     "liger-kernel>=0.5.2",
     "flash-attn==2.7.3",
 ]
-
-[tool.uv.sources]
-trl = { path = "../trl", editable = true }
